--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       display: flex;
       flex-direction: column;
       flex-shrink: 0;
+      margin-top: 25px;
     }
     .preset-textarea {
       flex: 1;
@@ -48,6 +49,7 @@
     .label {
       font-weight: bold;
       margin: 20px 0 5px;
+      font-size: 22px;
     }
     .log {
       margin-top: 15px;
@@ -194,10 +196,12 @@ dataLayer.push({
       textarea.value = preset.code;
       textarea.rows = 10;
 
+      const match = preset.code.match(/event\s*:\s*['"](.+?)['"]/);
+      const eventName = match ? match[1] : `custom_${index + 1}`;
+
       const label = document.createElement('div');
       label.className = 'preset-header';
-      const match = preset.code.match(/event\s*:\s*['"](.+?)['"]/);
-      label.textContent = 'Event: ' + (match ? match[1] : `custom_${index + 1}`);
+      label.textContent = 'Event: ' + eventName;
 
       buttons.appendChild(runBtn);
       buttons.appendChild(copyBtn);
@@ -231,6 +235,7 @@ dataLayer.push({
   </script>
 </body>
 </html>
+
 
 
 
