--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
       display: flex;
       flex-direction: column;
       flex-shrink: 0;
-      margin-top: 25px;
+      margin-top: 0;
     }
     .preset-textarea {
       flex: 1;
     }
     .label {
       font-weight: bold;
-      margin: 20px 0 5px;
-      font-size: 22px;
+      margin: 30px 0 10px;
+      font-size: 28px;
     }
     .log {
       margin-top: 15px;
@@ -235,6 +235,7 @@ dataLayer.push({
   </script>
 </body>
 </html>
+
 
 
 
