--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
     textarea {
       width: 100%;
       font-family: monospace;
-      resize: vertical;
+      resize: both;
       overflow: auto;
+      max-height: none;
+      max-width: none;
     }
     .preset-wrapper {
       display: flex;
@@ -49,7 +51,7 @@
     .label {
       font-weight: bold;
       margin: 30px 0 10px;
-      font-size: 32px;
+      font-size: 36px;
     }
     .log {
       margin-top: 15px;
@@ -188,7 +190,7 @@ dataLayer.push({
 
       const updateLabel = () => {
         const match = textarea.value.match(/event\s*:\s*['"](.+?)['"]/);
-        const name = match ? match[1] : `custom_${index + 1}`;
+        const name = match ? match[1] : (preset.name || `custom_${index + 1}`);
         label.textContent = 'Event: ' + name;
       };
 
