--- a/index.html
+++ b/index.html
@@ -27,8 +27,6 @@
       font-family: monospace;
       resize: both;
       overflow: auto;
-      max-height: none;
-      max-width: none;
     }
     .preset-wrapper {
       display: flex;
@@ -59,9 +57,6 @@
       padding: 10px;
       border: 1px solid #ddd;
       font-family: monospace;
-    }
-    hr {
-      margin: 30px 0;
     }
     .small-button {
       padding: 4px 8px;
@@ -181,21 +176,13 @@ dataLayer.push({
 
       const label = document.createElement('div');
       label.className = 'preset-header';
+      label.textContent = 'Event: ' + (preset.name || `custom_${index + 1}`);
 
       const textarea = document.createElement('textarea');
       textarea.className = 'preset-textarea';
       textarea.dataset.index = index;
       textarea.value = preset.code;
       textarea.rows = 10;
-
-      const updateLabel = () => {
-        const match = textarea.value.match(/event\s*:\s*['"](.+?)['"]/);
-        const name = match ? match[1] : (preset.name || `custom_${index + 1}`);
-        label.textContent = 'Event: ' + name;
-      };
-
-      textarea.addEventListener('input', updateLabel);
-      updateLabel();
 
       runBtn.onclick = () => {
         try {
@@ -244,6 +231,7 @@ dataLayer.push({
   </script>
 </body>
 </html>
+
 
 
 
